--- a/scatterplot-graph/styles.css
+++ b/scatterplot-graph/styles.css
@@ -5,3 +5,14 @@
 svg {
   background-color: aliceblue;
 }
+
+#tooltip {
+  text-align: left;
+  position: absolute;
+  background: lightskyblue; /* Set the background color here */
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 15px;
+  pointer-events: none;
+  visibility: hidden;
+}
